Update readmes and format code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,18 @@
 cmake_minimum_required(VERSION 3.15)
 
-set(APP_NAME "LMN_3_MIDI_EMULATOR")
-
-project(${APP_NAME} VERSION 0.0.1)
+project(LMN_3_EMULATOR VERSION 0.0.1)
 
 add_subdirectory(JUCE)            
 
-juce_add_gui_app(${APP_NAME}
+juce_add_gui_app(LMN_3_EMULATOR
     # VERSION ...                       # Set this if the app version is different to the project version
     # ICON_BIG ...                      # ICON_* arguments specify a path to an image file to use as an icon
     # ICON_SMALL ...
     # DOCUMENT_EXTENSIONS ...           # Specify file extensions that should be associated with this app
     # COMPANY_NAME ...                  # Specify the name of the app's author
-    PRODUCT_NAME "LMN-3 MIDI Emulator")     # The name of the final executable, which can differ from the target name
+    PRODUCT_NAME "LMN-3 Emulator")      # The name of the final executable, which can differ from the target name
 
-target_sources(${APP_NAME}
+target_sources(LMN_3_EMULATOR
     PRIVATE
         Source/Main.cpp
         Source/MainComponent.cpp
@@ -23,7 +21,7 @@ target_sources(${APP_NAME}
         Source/LookAndFeel/EmulatorLookAndFeel.cpp
 )
 
-target_include_directories(${APP_NAME}
+target_include_directories(LMN_3_EMULATOR
     PUBLIC
         Source/
         Source/Encoder
@@ -31,13 +29,13 @@ target_include_directories(${APP_NAME}
         Source/LookAndFeel
 )
 
-target_compile_definitions(${APP_NAME}
+target_compile_definitions(LMN_3_EMULATOR
     PRIVATE
         # JUCE_WEB_BROWSER and JUCE_USE_CURL would be on by default, but you might not need them.
         JUCE_WEB_BROWSER=0  # If you remove this, add `NEEDS_WEB_BROWSER TRUE` to the `juce_add_gui_app` call
         JUCE_USE_CURL=0     # If you remove this, add `NEEDS_CURL TRUE` to the `juce_add_gui_app` call
-        JUCE_APPLICATION_NAME_STRING="$<TARGET_PROPERTY:${APP_NAME},JUCE_PRODUCT_NAME>"
-        JUCE_APPLICATION_VERSION_STRING="$<TARGET_PROPERTY:${APP_NAME},JUCE_VERSION>")
+        JUCE_APPLICATION_NAME_STRING="$<TARGET_PROPERTY:LMN_3_EMULATOR,JUCE_PRODUCT_NAME>"
+        JUCE_APPLICATION_VERSION_STRING="$<TARGET_PROPERTY:LMN_3_EMULATOR,JUCE_VERSION>")
 
 
 juce_add_binary_data(FontData HEADER_NAME FontData.h NAMESPACE FontData SOURCES
@@ -47,7 +45,7 @@ juce_add_binary_data(FontData HEADER_NAME FontData.h NAMESPACE FontData SOURCES
 )
 
 
-target_link_libraries(${APP_NAME}
+target_link_libraries(LMN_3_EMULATOR
     PRIVATE
         FontData
         juce::juce_gui_extra
