Add workflow for releasing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,18 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.16)
 
-project(LMN_3_EMULATOR VERSION 0.0.1)
+project(LMN-3-EMULATOR VERSION 0.1.0)
 
 add_subdirectory(JUCE)            
 
-juce_add_gui_app(LMN_3_EMULATOR
+juce_add_gui_app(LMN-3-EMULATOR
     # VERSION ...                       # Set this if the app version is different to the project version
     # ICON_BIG ...                      # ICON_* arguments specify a path to an image file to use as an icon
     # ICON_SMALL ...
     # DOCUMENT_EXTENSIONS ...           # Specify file extensions that should be associated with this app
     # COMPANY_NAME ...                  # Specify the name of the app's author
-    PRODUCT_NAME "LMN-3 Emulator")      # The name of the final executable, which can differ from the target name
+    PRODUCT_NAME "LMN-3-Emulator")      # The name of the final executable, which can differ from the target name
 
-target_sources(LMN_3_EMULATOR
+target_sources(LMN-3-EMULATOR
     PRIVATE
         Source/Main.cpp
         Source/MainComponent.cpp
@@ -21,7 +21,7 @@ target_sources(LMN_3_EMULATOR
         Source/LookAndFeel/EmulatorLookAndFeel.cpp
 )
 
-target_include_directories(LMN_3_EMULATOR
+target_include_directories(LMN-3-EMULATOR
     PUBLIC
         Source/
         Source/Encoder
@@ -29,13 +29,13 @@ target_include_directories(LMN_3_EMULATOR
         Source/LookAndFeel
 )
 
-target_compile_definitions(LMN_3_EMULATOR
+target_compile_definitions(LMN-3-EMULATOR
     PRIVATE
         # JUCE_WEB_BROWSER and JUCE_USE_CURL would be on by default, but you might not need them.
         JUCE_WEB_BROWSER=0  # If you remove this, add `NEEDS_WEB_BROWSER TRUE` to the `juce_add_gui_app` call
         JUCE_USE_CURL=0     # If you remove this, add `NEEDS_CURL TRUE` to the `juce_add_gui_app` call
-        JUCE_APPLICATION_NAME_STRING="$<TARGET_PROPERTY:LMN_3_EMULATOR,JUCE_PRODUCT_NAME>"
-        JUCE_APPLICATION_VERSION_STRING="$<TARGET_PROPERTY:LMN_3_EMULATOR,JUCE_VERSION>")
+        JUCE_APPLICATION_NAME_STRING="$<TARGET_PROPERTY:LMN-3-EMULATOR,JUCE_PRODUCT_NAME>"
+        JUCE_APPLICATION_VERSION_STRING="$<TARGET_PROPERTY:LMN-3-EMULATOR,JUCE_VERSION>")
 
 
 juce_add_binary_data(FontData HEADER_NAME FontData.h NAMESPACE FontData SOURCES
@@ -45,7 +45,7 @@ juce_add_binary_data(FontData HEADER_NAME FontData.h NAMESPACE FontData SOURCES
 )
 
 
-target_link_libraries(LMN_3_EMULATOR
+target_link_libraries(LMN-3-EMULATOR
     PRIVATE
         FontData
         juce::juce_gui_extra
@@ -55,4 +55,5 @@ target_link_libraries(LMN_3_EMULATOR
     PUBLIC
         juce::juce_recommended_config_flags
         juce::juce_recommended_lto_flags
-        juce::juce_recommended_warning_flags)
+        juce::juce_recommended_warning_flags
+)
