--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build_x86_64:
+    needs: [ linting ]
     runs-on: ubuntu-20.04
     container: stonepreston/juce_compiler:latest
 
@@ -18,7 +19,7 @@ jobs:
 
       - name: build
         run: |
-          cmake -B build -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Release
+          cmake -B build -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Debug
           cmake --build build -j8
           zip LMN-3-Emulator-x86_64.zip ./build/LMN-3-Emulator_artefacts/Release/LMN-3-Emulator ./LICENSE
 
