--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -26,4 +26,4 @@ jobs:
       - name: build using cmake
         run: |
           cmake -B build -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Release
-          cmake --build build --target Tests -j8
+          cmake --build build --target LMN-3-Emulator -j8
