--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -13,7 +13,7 @@ jobs:
           extensions: 'h,cpp'
           clangFormatVersion: 10
 
-  test:
+  build:
     needs: linting
     runs-on: ubuntu-20.04
     container: stonepreston/juce_compiler:latest
@@ -25,5 +25,6 @@ jobs:
 
       - name: build using cmake
         run: |
+          sudo apt-get install llvm-10-linker-tools
           cmake -B build -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Release
           cmake --build build --target LMN-3-Emulator -j8
