--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -25,6 +25,6 @@ jobs:
 
       - name: build using cmake
         run: |
-          apt-get install -y --no-install-recommends llvm-10-linker-tools
+          apt-get install -y --no-install-recommends llvm-10-tools
           cmake -B build -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Release
           cmake --build build --target LMN-3-Emulator -j8
