--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build_x86_64:
-    needs: [ linting ]
     runs-on: ubuntu-20.04
     container: stonepreston/juce_compiler:latest
 
@@ -19,9 +18,9 @@ jobs:
 
       - name: build
         run: |
-          cmake -B build -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Debug
+          cmake -B build -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Release
           cmake --build build -j8
-          zip LMN-3-Emulator-x86_64.zip ./build/LMN-3-Emulator_artefacts/Release/LMN-3-Emulator ./LICENSE
+          zip -r -j LMN-3-Emulator-x86_64.zip ./build/LMN-3-Emulator_artefacts/Release/LMN-3-Emulator ./LICENSE
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
