Add arm and aarch64 to release workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   build_x86_64:
     runs-on: ubuntu-20.04
-    container: stonepreston/juce_compiler:latest
+    container: stonepreston/juce-x86_64-compiler:latest
 
     steps:
       - name: checkout
@@ -29,18 +29,74 @@ jobs:
           path: LMN-3-Emulator-x86_64.zip
           retention-days: 1
 
+  build_arm:
+    runs-on: ubuntu-20.04
+    container: stonepreston/juce-arm-linux-cross-compiler:latest
+
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: build
+        run: |
+          cmake -B build -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-fuse-ld=lld
+          cmake --build build -j8
+          zip -r -j LMN-3-Emulator-arm-linux-gnueabihf.zip ./build/LMN-3-Emulator_artefacts/Release/LMN-3-Emulator ./LICENSE
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: LMN-3-Emulator-arm-linux-gnueabihf
+          path: LMN-3-Emulator-arm-linux-gnueabihf.zip
+          retention-days: 1
+
+  build_aarch64:
+    runs-on: ubuntu-20.04
+    container: stonepreston/juce-aarch64-linux-cross-compiler:latest
+
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: build
+        run: |
+          cmake -B build -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-fuse-ld=lld
+          cmake --build build -j8
+          zip -r -j LMN-3-Emulator-aarch64-linux-gnu.zip ./build/LMN-3-Emulator_artefacts/Release/LMN-3-Emulator ./LICENSE
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: LMN-3-Emulator-aarch64-linux-gnu
+          path: LMN-3-Emulator-aarch64-linux-gnu.zip
+          retention-days: 1
+
   release:
     runs-on: ubuntu-20.04
-    needs: [build_x86_64]
+    needs: [build_x86_64, build_arm, build_aarch64]
     steps:
       - name: Download x86-64 LMN-3-Emulator artifact
         uses: actions/download-artifact@v3
         with:
           name: LMN-3-Emulator-x86_64
+      - name: Download arm LMN-3-Emulator artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: LMN-3-Emulator-arm-linux-gnueabihf
+      - name: Download arm LMN-3-Emulator artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: LMN-3-Emulator-aarch64-linux-gnu
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           draft: true
           files: |
             LMN-3-Emulator-x86_64.zip
+            LMN-3-Emulator-arm-linux-gnueabihf.zip
+            LMN-3-Emulator-aarch64-linux-gnu.zip
 
